[tool.poetry]
name = "dz-12-2-5"
version = "0.1.0"
description = ""
authors = ["Andrey <hamanist@gmail.com>"]
readme = "README.md"
packages = [{include = "dz_12"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"


[tool.poetry.group.vev.dependencies]
coverage = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
